# myFlask

./: .gitignore  README.md  manage.py  pyproject.toml
app/: router.py
app/configs/: __init__.py  default.py  development.py  pre_release.py  production.py  testing.py
app/models/: __init__.py  user.py
app/views/: __init__.py  demo.py
core/: database.py  helpers.py
myflask/: run.py
